# local-apps

./: local-apps.nix
android-gospel-library/: default.nix
emacs-server/: common-lib  connect-emacs  default.nix  emacs  emacs-command  preload-emacs  start-emacs  startemacs  todo.org  todo.txt
gtkmenu/: LICENSE  default.nix  gtkmenu.cabal  gtkmenu.hs  gtkmenu.nix  gtkmenu_run  shell.nix
travis-hartwell-mail/: default.nix  travis-hartwell-mail
