cabal-version:       2.2
name:                gtkmenu
version:             0.1.0.0
synopsis:            dmenu workalike using gtk
license:             MIT
license-file:        LICENSE
author:              Travis B. Hartwell
maintainer:          nafai@travishartwell.net
build-type:          Simple

executable gtkmenu
  main-is:             gtkmenu.hs
  build-depends:       base >=4.9,
                       gtk,
                       glib
  default-language:    Haskell2010
  ghc-options:         -Wall
